@@ -270,13 +270,9 @@ include::{sourcedir}/extension/PendingFeatureIfDocSpec.groovy[tag=example-c]
 
 To execute features in the order that they are declared, annotate a spec class with `spock.lang.Stepwise`:
 
-[source,groovy]
+[source,groovy,indent=0]
 ----
-@Stepwise
-class RunInOrderSpec extends Specification {
-  def "I run first"()  { ... }
-  def "I run second"() { ... }
-}
+include::{sourcedir}/extension/StepwiseDocSpec.groovy[tag=example-a]
 ----
 
 `Stepwise` only affects the class carrying the annotation; not sub or super classes.  Features after the first
@@ -286,6 +282,17 @@ failure are skipped.
 should be taken when ignoring feature methods in spec classes annotated with `Stepwise`.
 
 NOTE: This will also set the execution mode to `SAME_THREAD`, see <<parallel-execution.adoc#parallel-execution, Parallel Execution>> for more information.
+
+Since Spock 2.2, `Stepwise` can be applied to data-driven feature methods, having the effect of executing them sequentially (even if concurrent test mode is active) and to skip subsequent iterations if one iteration fails:
+
+[source,groovy,indent=0]
+----
+include::{sourcedir}/extension/StepwiseDocSpec.groovy[tag=example-b]
+----
+
+This will pass for the first two iterations, fail on the third and skip the remaining two. Without `Stepwise` on feature method level, the third iteration would fail and the remaining 4 iterations would pass.
+
+NOTE: For backward compatibility with Spock versions prior to 2.2, applying the annotation on spec level will _not_ automatically skip subsequent feature method iterations upon failure in a previous iteration. If you want that in addition to (or instead of) step-wise spec mode, you do have to annotate each individual feature method you wish to have that capability. This also conforms to the principle that if you want to skip tests under whatever conditions, you ought to document your intent explicitly.
 
 === Timeout
 
